[package]
name = "cses-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
egui.workspace = true
reqwest.workspace = true
tokio.workspace = true
utils.workspace = true

scraper = "0.13.0"
selectors = "0.22.0"
