[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
egui.workspace = true
chrono.workspace = true
reqwest = "0.11.12"
tokio.workspace = true
utils.workspace = true
serde_json = "1.0.85"
serde.workspace = true
